crates/glyph-cli/tests/corpus/valid/slot_in_context.glyph
skill bugfix(scope = "." <"directory to investigate">)
    description: "Fix a bug."
    context: "Check the {scope} directory first."
    flow:
        "Fix the bug."
