crates/glyph-cli/tests/corpus/invalid/case_insensitive_description.glyph
skill demo()
    Description: "Has a {slot}."
    flow:
        "Do."
